# mnokol_tyuiu.chatgpt_in_educon

./: .flake8  README.md  pyproject.toml
src/: chatgpt.py  config.py  educon.py  main.py
