[tool.poetry]
name = "mnokol-tyuiu-chatgpt-in-educon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mnokol_tyuiu"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.37.0"
openai = "^0.28.0"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
